RESOLVED FIXED128095
Fix context save/restore mistake spotted in SVGInlineTextBox::paintTextWithShadows
https://bugs.webkit.org/show_bug.cgi?id=128095
Summary Fix context save/restore mistake spotted in SVGInlineTextBox::paintTextWithSh...
Darin Adler
Reported 2014-02-02 20:51:42 PST
Fix context save/restore mistake spotted in SVGInlineTextBox::paintTextWithShadows
Attachments
Patch (1.76 KB, patch)
2014-02-02 20:52 PST, Darin Adler
no flags
Darin Adler
Comment 1 2014-02-02 20:52:35 PST
Darin Adler
Comment 2 2014-02-02 20:53:41 PST
I spotted this obvious minor logic mistake while making some other changes to this function. This is the minimal change to fix it. I have no idea if the error causes actual symptoms, but it seems worth fixing.
Andreas Kling
Comment 3 2014-02-02 21:45:54 PST
Comment on attachment 222956 [details] Patch Sure, r=me. Maybe someday we can RAII our way out of things like this.
WebKit Commit Bot
Comment 4 2014-02-02 22:13:25 PST
Comment on attachment 222956 [details] Patch Clearing flags on attachment: 222956 Committed r163286: <http://trac.webkit.org/changeset/163286>
WebKit Commit Bot
Comment 5 2014-02-02 22:13:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.