Fix context save/restore mistake spotted in SVGInlineTextBox::paintTextWithShadows https://bugs.webkit.org/show_bug.cgi?id=128095

Reviewed by Andreas Kling.

* rendering/svg/SVGInlineTextBox.cpp:
(WebCore::SVGInlineTextBox::paintTextWithShadows): Move calls to GraphicsContext::restore
and GraphicsContext::clearShadow before restoreGraphicsContextAfterTextPainting, since that
function can swap contexts.


Canonical link: https://commits.webkit.org/146104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163286 268f45cc-cd09-0410-ab3c-d52691b4dbfc